kubernetes/apps/network/envoy-gateway/config/external.yaml
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-external
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-external
    namespace: network
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: "168.119.32.22,2a01:4f8:242:4691::1"
spec:
  gatewayClassName: envoy-external
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: mortebrume.eu
  addresses:
    - type: IPAddress
      value: 168.119.32.22
    - type: IPAddress
      value: 2a01:4f8:242:4691::1
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: mortebrume-eu-tls
    - name: ssh
      protocol: TCP
      port: 7717
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
        kinds:
          - kind: TCPRoute
    - name: torrent
      protocol: TCP
      port: 50813
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
