kubernetes/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-internal
    namespace: network
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: "100.115.152.117,fd7a:115c:a1e0::b901:9883"
spec:
  gatewayClassName: envoy-internal
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: mortebrume.eu
  addresses:
    - type: IPAddress
      value: "100.115.152.117"
    - type: IPAddress
      value: "fd7a:115c:a1e0::b901:9883"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: mortebrume-eu-tls
